Bug #41918  Error in sql/mysqld.cc using libwrap